turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:11: error: ';' expected but ')' found.
			setCouleurBrosse((colors(i+1))%colors.length))
                                                                     ^